log
Wed, May 14, 2025  8:53:23 AM: 
 sudoku.c | 9 +++++++++
 1 file changed, 9 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_final':
sudoku.c:59:20: error: invalid initializer
   int sudo[9][9] = n->sudo;
                    ^
3f0e54c
Wed, May 14, 2025  8:54:22 AM: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_final':
sudoku.c:59:21: error: invalid initializer
   int sudok[9][9] = n->sudo;
                     ^
e6fd1e8
Wed, May 14, 2025  8:55:46 AM: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  1|4
total_score: 10/70
a5ce086
